kubernetes/traefik/gateway.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: eks-2048
  namespace: default

spec:
  gatewayClassName: traefik

  listeners:
    - name: http
      protocol: HTTP
      port: 80
      hostname: eks.mohsin430.com

    - name: https
      protocol: HTTPS
      port: 443
      hostname: eks.mohsin430.com

      tls:
        mode: Terminate
        certificateRefs:
          - name: eks-2048-tls
